; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8192u/ieee80211/extr_ieee80211_crypt_ccmp.c_ieee80211_ccmp_print_stats.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8192u/ieee80211/extr_ieee80211_crypt_ccmp.c_ieee80211_ccmp_print_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_ccmp_data = type { i32, i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [95 x i8] c"key[%d] alg=CCMP key_set=%d tx_pn=%pm rx_pn=%pm format_errors=%d replays=%d decrypt_errors=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*)* @ieee80211_ccmp_print_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ieee80211_ccmp_print_stats(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ieee80211_ccmp_data*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.ieee80211_ccmp_data*
  store %struct.ieee80211_ccmp_data* %7, %struct.ieee80211_ccmp_data** %5, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = load %struct.ieee80211_ccmp_data*, %struct.ieee80211_ccmp_data** %5, align 8
  %10 = getelementptr inbounds %struct.ieee80211_ccmp_data, %struct.ieee80211_ccmp_data* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.ieee80211_ccmp_data*, %struct.ieee80211_ccmp_data** %5, align 8
  %13 = getelementptr inbounds %struct.ieee80211_ccmp_data, %struct.ieee80211_ccmp_data* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.ieee80211_ccmp_data*, %struct.ieee80211_ccmp_data** %5, align 8
  %16 = getelementptr inbounds %struct.ieee80211_ccmp_data, %struct.ieee80211_ccmp_data* %15, i32 0, i32 6
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.ieee80211_ccmp_data*, %struct.ieee80211_ccmp_data** %5, align 8
  %19 = getelementptr inbounds %struct.ieee80211_ccmp_data, %struct.ieee80211_ccmp_data* %18, i32 0, i32 5
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.ieee80211_ccmp_data*, %struct.ieee80211_ccmp_data** %5, align 8
  %22 = getelementptr inbounds %struct.ieee80211_ccmp_data, %struct.ieee80211_ccmp_data* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.ieee80211_ccmp_data*, %struct.ieee80211_ccmp_data** %5, align 8
  %25 = getelementptr inbounds %struct.ieee80211_ccmp_data, %struct.ieee80211_ccmp_data* %24, i32 0, i32 3
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.ieee80211_ccmp_data*, %struct.ieee80211_ccmp_data** %5, align 8
  %28 = getelementptr inbounds %struct.ieee80211_ccmp_data, %struct.ieee80211_ccmp_data* %27, i32 0, i32 4
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @sprintf(i8* %8, i8* getelementptr inbounds ([95 x i8], [95 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %14, i32 %17, i32 %20, i32 %23, i32 %26, i32 %29)
  %31 = load i8*, i8** %3, align 8
  %32 = sext i32 %30 to i64
  %33 = getelementptr inbounds i8, i8* %31, i64 %32
  store i8* %33, i8** %3, align 8
  %34 = load i8*, i8** %3, align 8
  ret i8* %34
}

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
